# floco

./: LICENSE.md  README.md  binned_ctp.py  binned_estimation.py  binned_ilp.py  binned_main.py  clustering.py  counts_to_probabs.py  distribution_plots.py  estimation.py  floco.py  flow_ilp.py  flow_main.py  graph_processing.py  ln_estimation.py  pyproject.toml  requirements.txt  setup.py
src/: estimation.py  floco.py
src/floco/: __init__.py  counts_to_probabs.py  floco.py  flow_ilp.py  graph_processing.py
